<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/picture_title"
        style="@style/mars_picture_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_8dp_small"
        android:layout_marginVertical="@dimen/margin_12dp_small"
        android:gravity="center"
        android:text="@string/mars_picture_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/text_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp_small"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/picture_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp_small"
            android:orientation="horizontal">

            <TextView
                style="@style/mars_picture_elements_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp_small"
                android:text="@string/mars_picture_rover" />

            <TextView
                android:id="@+id/rover_name"
                style="@style/mars_picture_elements_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12dp_small"
                android:layout_marginEnd="@dimen/margin_8dp_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp_small"
            android:orientation="horizontal">

            <TextView
                style="@style/mars_picture_elements_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp_small"
                android:text="@string/mars_picture_camera" />

            <TextView
                android:id="@+id/rover_camera"
                style="@style/mars_picture_elements_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12dp_small"
                android:layout_marginEnd="@dimen/margin_8dp_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp_small"
            android:orientation="horizontal">

            <TextView
                style="@style/mars_picture_elements_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp_small"
                android:text="@string/mars_picture_date" />

            <TextView
                android:id="@+id/earth_date"
                style="@style/mars_picture_elements_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12dp_small"
                android:layout_marginEnd="@dimen/margin_8dp_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp_small"
            android:orientation="horizontal">

            <TextView
                style="@style/mars_picture_elements_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp_small"
                android:text="@string/mars_picture_mars_sol" />

            <TextView
                android:id="@+id/mars_date"
                style="@style/mars_picture_elements_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12dp_small"
                android:layout_marginEnd="@dimen/margin_8dp_small" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_8dp_small"
        android:layout_marginBottom="@dimen/margin_8dp_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_block">

        <com.test.application.core.custom_view.EquilateralImageView
            android:id="@+id/mars_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>